# QSequalCD

./: CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
apps/web-demo/: app.js  index.html
apps/web-demo/wasm/: qscd_wasm.wasm
bindings/wasm/: CMakeLists.txt  qscd_wasm.cpp  qscd_wasm.hpp
docs/: architecture.md  design-philosophy.md  rule.md
include/qscd/core/: Card.hpp  Commands.hpp  DeckFactory.hpp  GameState.hpp  Invariants.hpp  Queries.hpp  Result.hpp  Rules.hpp
scripts/: build-wasm.sh  build-web-demo.sh
site/: app.js  style.css
site/wasm/: qscd_wasm.js  qscd_wasm.wasm
src/core/: Commands.cpp  DeckFactory.cpp  Invariants.cpp  Queries.cpp
tests/core/: CommandImmutabilityTests.cpp  ContinuationTests.cpp  DeckFactoryTests.cpp  ExtraRoundTests.cpp  FinishRoundTests.cpp  HandUsageTests.cpp  InvariantTests.cpp  ProjectTests.cpp  RevealTests.cpp  ScoringTests.cpp  StartGameTests.cpp  StartRoundTests.cpp  TestHelpers.hpp  TestMain.cpp
